--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 <body>
     <header>
         <div class="banner">
-         <img id="logo" src="img/logo.svg" alt="booleaner">
+         <img id="logo" src="img/ logo.svg" alt="booleaner">
         </div>
     </header>
-    
+
+    <main>
+        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <div id="autore">
+            Scritto da <a href="www.boo.it"> The Booleaner</a> <br> il 28/02/22
+        </div>
+    </main>
+
+
 </body>
 </html>
