--- a/index.html
+++ b/index.html
@@ -10,14 +10,60 @@
 <body>
     <header>
         <div class="banner">
-         <img id="logo" src="img/ logo.svg" alt="booleaner">
+         <img id="logo" src="img/logo.svg" alt="booleaner">
         </div>
     </header>
 
     <main>
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <div id="autore">
-            Scritto da <a href="www.boo.it"> The Booleaner</a> <br> il 28/02/22
+       
+        <div>
+            <h1>Internet deve essere al servizio del "bene pubblico": il <br> manifesto di Tim Berners-Lee</h1>
+            <p id="autore">Scritto da <a href="www.boo.it"> The Booleaner</a> <br> il 28/02/22</p>
+        </div>
+
+        <div>
+            <img src="img/tim-1.jpg" alt="tim1"> <img src="img/tim-2.jpg" alt="tim2"> <br> 1st Photo: John S. amd James L. Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikimedia, by Paul Clarke
+        </div>
+
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur fugiat quod voluptas soluta fuga laborum omnis libero. Tempora fuga sed <p class="evidente">libero fugit optio voluptatum nostrum magni?</p> libero fugit optio voluptatum nostrum magni? Sint officia similique dignissimos?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium accusantium ut quisquam dolorem veritatis id, quod consequuntur cum provident quasi ullam error hic maxime eaque? Culpa consectetur autem quod!</p>
+        </div>
+
+        <div>
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui odit dicta labore, perspiciatis fugiat suscipit iste incidunt rem tenetur. Excepturi itaque eveniet nisi neque dicta odit voluptatum. Alias, ea ipsa.</li>
+                <li>Lorem ipsum dolor sit amet,  Qui odit dicta labore, perspiciatis fugiat suscipit iste incidunt rem tenetur. Excepturi itaque eveniet nisi neque dicta odit voluptatum. Alias, ea ipsa.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.  Excepturi itaque eveniet nisi neque dicta odit voluptatum. Alias, ea ipsa.</li>
+            </ul>
+        </div>
+
+        <div>
+            <table class="tg">
+                <thead>
+                  <tr>
+                    <th class="tg-0pky">Lorem ipsum dolor</th>
+                    <th class="tg-0lax">Lorem ipsum dolor</th>
+                    <th class="tg-0lax">Lorem ipsum dolor</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="tg-0lax">Lorem ipsum dolor</td>
+                    <td class="tg-0lax">Lorem ipsum dolor</td>
+                    <td class="tg-0lax">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique pariatur aperiam, magnam eligendi molestias maiores nisi, quisquam ea possimus dolore odit facilis, quam porro labore quibusdam at culpa iusto nulla.</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">Lorem ipsum dolor</td>
+                    <td class="tg-0lax">Lorem ipsum dolor</td>
+                    <td class="tg-0lax">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis officia consectetur nam illo accusamus suscipit ipsum, delectus totam magni qui aut, molestias blanditiis pariatur rem esse eligendi modi omnis dolore!</td>
+                  </tr>
+                  <tr>
+                    <td class="tg-0lax">Lorem ipsum dolor</td>
+                    <td class="tg-0lax">Lorem ipsum dolor</td>
+                    <td class="tg-0lax">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad labore eius dolorem reiciendis pariatur recusandae enim vitae, ea, velit magni nam, molestias autem maiores cumque reprehenderit hic omnis eveniet itaque.</td>
+                  </tr>
+                </tbody>
+                </table>
         </div>
     </main>
 
