--- a/index.html
+++ b/index.html
@@ -38,33 +38,48 @@
         </div>
 
         <div>
-            <table class="tg">
-                <thead>
-                  <tr>
-                    <th class="tg-0pky">Lorem ipsum dolor</th>
-                    <th class="tg-0lax">Lorem ipsum dolor</th>
-                    <th class="tg-0lax">Lorem ipsum dolor</th>
-                  </tr>
-                </thead>
+            <table>
                 <tbody>
-                  <tr>
-                    <td class="tg-0lax">Lorem ipsum dolor</td>
-                    <td class="tg-0lax">Lorem ipsum dolor</td>
-                    <td class="tg-0lax">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique pariatur aperiam, magnam eligendi molestias maiores nisi, quisquam ea possimus dolore odit facilis, quam porro labore quibusdam at culpa iusto nulla.</td>
-                  </tr>
-                  <tr>
-                    <td class="tg-0lax">Lorem ipsum dolor</td>
-                    <td class="tg-0lax">Lorem ipsum dolor</td>
-                    <td class="tg-0lax">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis officia consectetur nam illo accusamus suscipit ipsum, delectus totam magni qui aut, molestias blanditiis pariatur rem esse eligendi modi omnis dolore!</td>
-                  </tr>
-                  <tr>
-                    <td class="tg-0lax">Lorem ipsum dolor</td>
-                    <td class="tg-0lax">Lorem ipsum dolor</td>
-                    <td class="tg-0lax">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad labore eius dolorem reiciendis pariatur recusandae enim vitae, ea, velit magni nam, molestias autem maiores cumque reprehenderit hic omnis eveniet itaque.</td>
-                  </tr>
+                <tr id="testa">
+                <td><strong>Lorem ipsum dolor</strong></td>
+                <td><strong>Lorem ipsum dolor</strong></td>
+                <td><strong>Lorem ipsum dolor</strong></td>
+                </tr>
+                <tr id="corpo1">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus reprehenderit eaque at nesciunt sed cumque adipisci rem distinctio sint, iure mollitia, inventore ad nihil voluptatum totam cum culpa rerum deserunt!</td>
+                </tr>
+                <tr id="corpo2">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus reprehenderit eaque at nesciunt sed cumque adipisci rem distinctio sint, iure mollitia, inventore ad nihil voluptatum totam cum culpa rerum deserunt!</td>
+                </tr>
+                <tr id="corpo3">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus reprehenderit eaque at nesciunt sed cumque adipisci rem distinctio sint, iure mollitia, inventore ad nihil voluptatum totam cum culpa rerum deserunt!</td>
+                </tr>
                 </tbody>
                 </table>
         </div>
+
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur fugiat quod voluptas soluta fuga laborum omnis libero. Tempora fuga sed <p class="evidente">libero fugit optio voluptatum nostrum magni?</p> libero fugit optio voluptatum nostrum magni? Sint officia similique dignissimos?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium accusantium ut quisquam dolorem veritatis id, quod consequuntur cum provident quasi ullam error hic maxime eaque? Culpa consectetur autem quod!</p>
+        </div>
+
+        <div>
+           <h3 id="interesse"> Potrebbero interessarti</h3>
+           <div id="immagine1">
+               <h2 class="testoimmagini">Lorem ipsum dolor</h2>
+           </div>
+        </div>
+
+        <div>
+            <div id="immagine2">
+                <h2 class="testoimmagini">Lorem ipsum dolor</h2>
+            </div>
+         </div>
     </main>
 
 
