--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
 </head>
+
 <body>
+
     <header>
         <div class="banner">
          <img id="logo" src="img/logo.svg" alt="booleaner">
@@ -45,7 +47,7 @@
                 <td><strong>Lorem ipsum dolor</strong></td>
                 <td><strong>Lorem ipsum dolor</strong></td>
                 </tr>
-                <tr id="corpo1">
+                <tr class="azzurro" id="corpo1">
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus reprehenderit eaque at nesciunt sed cumque adipisci rem distinctio sint, iure mollitia, inventore ad nihil voluptatum totam cum culpa rerum deserunt!</td>
@@ -55,7 +57,7 @@
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus reprehenderit eaque at nesciunt sed cumque adipisci rem distinctio sint, iure mollitia, inventore ad nihil voluptatum totam cum culpa rerum deserunt!</td>
                 </tr>
-                <tr id="corpo3">
+                <tr class="azzurro" id="corpo3">
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor</td>
                 <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus reprehenderit eaque at nesciunt sed cumque adipisci rem distinctio sint, iure mollitia, inventore ad nihil voluptatum totam cum culpa rerum deserunt!</td>
@@ -80,8 +82,9 @@
                 <h2 class="testoimmagini">Lorem ipsum dolor</h2>
             </div>
          </div>
+
     </main>
 
-
 </body>
+
 </html>
